WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156813
showCandidates() should take a range and the string should be the whole paragraph
https://bugs.webkit.org/show_bug.cgi?id=156813
Summary
showCandidates() should take a range and the string should be the whole parag...
Beth Dakin
Reported
2016-04-20 14:58:56 PDT
showCandidates() should take a range and the string should be the whole paragraph
Attachments
Patch
(11.06 KB, patch)
2016-04-20 15:46 PDT
,
Beth Dakin
no flags
Details
Formatted Diff
Diff
Patch
(11.10 KB, patch)
2016-04-20 16:04 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2016-04-20 15:46:55 PDT
Created
attachment 276860
[details]
Patch
WebKit Commit Bot
Comment 2
2016-04-20 15:49:13 PDT
Attachment 276860
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Cocoa/WebViewImpl.mm:2164: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit/mac/WebCoreSupport/WebEditorClient.mm:1161: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit/mac/WebCoreSupport/WebEditorClient.mm:1192: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 3 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Beth Dakin
Comment 3
2016-04-20 16:04:43 PDT
Created
attachment 276861
[details]
Patch
WebKit Commit Bot
Comment 4
2016-04-20 16:05:58 PDT
Attachment 276861
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Cocoa/WebViewImpl.mm:2164: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit/mac/WebCoreSupport/WebEditorClient.mm:1161: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit/mac/WebCoreSupport/WebEditorClient.mm:1192: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 3 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Beth Dakin
Comment 5
2016-04-21 12:39:12 PDT
Thanks Tim!
http://trac.webkit.org/changeset/199828
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug