Source/WebKit/mac/WebCoreSupport/WebEditorClient.h
@@ -187,6 +187,10 @@ private:
 #endif
 
     WebCore::VisibleSelection m_lastSelectionForRequestedCandidates;
+#if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101200
+    RetainPtr<NSString> m_paragraphContextForCandidateRequest;
+    NSRange m_rangeForCandidates;
+#endif
 
     WeakPtrFactory<WebEditorClient> m_weakPtrFactory;
 };
